Using Equality Comparer

--- a/ValueTypeEquality/ValueTypeEquality.csproj
+++ b/ValueTypeEquality/ValueTypeEquality.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FoodItem.cs" />
+    <Compile Include="FoodItemEqualityComparer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
